# at2_ml_as_a_service_api

./: Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile_backend.txt  Makefile  README.md  __init__.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
Dockerfile/: mkdocs.yml
Dockerfile/docs/: index.md
app/: app.py  start.sh
app/backend/: Dockerfile  api _draft.py  api.py  api_draft_2.py  box_data.json  cat_id.pkl  data.json  dept_id_encoder.pkl  id_values.json  item_encoder.pkl  main.py  scaler.pkl  state_encoder.pkl  store_encoder.pkl
app/frontend/: Dockerfile  app.py  data.json  list_item.json  render.yaml  test_app.py
models/: predictive_lgbm.pkl  prophet_event.pkl  prophet_month.pkl  prophet_predictive_model.pkl  scaler.pkl
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
