[tool.poetry]
name = "pandas"
version = "0.1.0"
description = ""
authors = ["thehaibui <thehai.bui@student.uts.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"

[tool.poetry.group.dev.dependencies]
prophet = "^1.1.5"
uvicorn = "^0.31.0"
fastapi = "^0.115.0"
numpy = "^2.1.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
