[tool.poetry]
name = "at2-ml-as-a-service-api"
version = "0.1.0"
description = ""
authors = ["thehaibui <thehai.bui@student.uts.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.102.0"
streamlit = "1.36.0"
pandas = "2.2.2"
scikit-learn = "1.5.1"
numpy = "1.23.5"
cmdstanpy = "^1.0.0"

[tool.poetry.group.dev.dependencies]
# Dev dependencies (optional)
uvicorn = "^0.31.0"
pytest = "^7.0"  # Add any other dev dependencies you need

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
